--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css?family=Muli&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Quicksand&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@1,500&display=swap');
 
 body {
-  font-family: 'Muli', sans-serif;
-  color: rgba(0, 0, 0, 0.8);
-  font-weight: 400;
-  letter-spacing: -.003em;
-  font-size: 16px;
-  background-color: whitesmoke;
+  /* font-family: 'Open Sans Coonndensed', 'sans-serif'; */
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+* {
+  box-sizing: border-box;
 }
