--- a/src/components/cart-item/cart-item.styles.scss
+++ b/src/components/cart-item/cart-item.styles.scss
@@ -3,6 +3,7 @@
 	display: flex;
 	height: 80px;
 	margin-bottom: 15px;
+	font-size: small !important;
 
 	img {
 		width: 30%;
@@ -17,7 +18,10 @@
 		padding: 10px 20px;
 
 		.name {
-			font-size: 16px;
+			font-size: 14px;
+		}
+		.price {
+			font-size: 14px;
 		}
 	}
 }
