--- a/src/components/directory-item/directory-item.styles.scss
+++ b/src/components/directory-item/directory-item.styles.scss
@@ -1,4 +1,4 @@
-.category-container {
+.directory-item-container {
 	min-width: 30%;
 	height: 240px;
 	flex: 1 1 auto;
@@ -17,7 +17,7 @@
 			transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
 		}
 
-		& .category-body-container {
+		& .body {
 			opacity: 0.9;
 		}
 	}
@@ -41,7 +41,7 @@
 		background-position: center;
 	}
 
-	.category-body-container {
+	.body {
 		height: 90px;
 		padding: 0 25px;
 		display: flex;
@@ -52,6 +52,7 @@
 		background-color: white;
 		opacity: 0.7;
 		position: absolute;
+		text-transform: uppercase;
 
 		h2 {
 			font-weight: bold;
